Restore removed test definition