@@ -21,6 +21,14 @@
  * questions.
  */
 
+/*
+ * @test
+ * @enablePreview
+ * @requires jdk.foreign.linker != "UNSUPPORTED"
+ * @modules java.base/jdk.internal.foreign
+ * @run testng/othervm --enable-native-access=ALL-UNNAMED TestIllegalLink
+ */
+
 import java.lang.foreign.Arena;
 import java.lang.foreign.Linker;
 import java.lang.foreign.FunctionDescriptor;
